force-app/main/default/objects/Event_Log__e/Event_Log__e.object-meta.xml
<CustomObject>
    <description>Logging of events from various sources, such as Apex and Flow</description>
    <label>Event Log</label>
    <pluralLabel>Event Logs</pluralLabel>
</CustomObject>