force-app/main/default/objects/Event_Log__e/fields/Executing_User__c.field-meta.xml
<CustomField>
    <fullName>Executing_User__c</fullName>
    <description>Who is executing the flow or apex (if available)</description>
    <label>Executing User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>