force-app/main/default/objects/Event_Log__e/fields/Interview_Guid__c.field-meta.xml
<CustomField>
    <fullName>Interview_Guid__c</fullName>
    <description>What is the running Flow interview Guid</description>
    <label>Interview Guid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>