force-app/main/default/objects/Event_Log__e/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>The origin of the log message, what Flow or Apex</description>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>