force-app/main/default/objects/Event_Log__e/fields/Origin_Element__c.field-meta.xml
<CustomField>
    <fullName>Origin_Element__c</fullName>
    <description>What element in the flow the event originated from</description>
    <label>Origin Element</label>
    <length>255</length>
    <type>Text</type>
</CustomField>