force-app/main/default/objects/Event_Log__e/fields/Origin_Type__c.field-meta.xml
<CustomField>
    <fullName>Origin_Type__c</fullName>
    <description>What is the type of origin of the log (flow or apex)</description>
    <label>Origin Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>