force-app/main/default/objects/Event_Log__e/fields/Related_Record__c.field-meta.xml
<CustomField>
    <fullName>Related_Record__c</fullName>
    <description>The related record of the log</description>
    <label>Related Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>