force-app/main/default/objects/Event_Log__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of log, either an error, a warning or an exception</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>